refactoring related to misuse of Optional (#42)
Co-authored-by: Antonio Damato <adamato@Antonios-MacBook-Pro.local>